# inferECC

./: .gitignore  Makefile  README.md  pyproject.toml
autocorrelation/: ecdna_autocorrelation_v4.py  ecdna_fish_pipeline_run-DC.ipynb  ecdna_fish_pipeline_run-TC.ipynb  ecdna_fish_pipeline_run_plot_MUC4.ipynb  ecdna_fish_pipeline_run_plot_MUC4.py  ecdna_fish_pipeline_run_plot_MYC-PVT1.ipynb  ecdna_fish_pipeline_run_plot_MYC_PVT1_task1.py  ecdna_fish_pipeline_run_plot_MYC_PVT1_task1_v2.py  ecdna_fish_pipeline_run_plot_SEMA3B_v2.py  ecdna_fish_pipeline_run_plot_SEMA3B_v2_1_full.py  ecdna_fish_pipeline_v4.py  pipeline_plot_v2.py
notebook/: inferecc_Fig-s1-a_ECDNA_CNV_BG-Copy1.ipynb  inferecc_Fig-s1-a_ECDNA_CNV_BG-Copy2.ipynb  inferecc_Fig-s1-a_ECDNA_CNV_BG-Copy3.ipynb  inferecc_Fig-s1-a_ECDNA_CNV_BG-Copy4.ipynb  inferecc_Fig-s1-a_ECDNA_CNV_BG-Copy5.ipynb  inferecc_Fig-s1-a_ECDNA_CNV_BG.ipynb  inferecc_Fig1-all_mtx_final.ipynb  inferecc_Fig1-ecDNA_circle_viz_plot.ipynb  inferecc_Fig1-stat_ecDNA_burden.ipynb  inferecc_Fig2-Ncancers3_specific-common.ipynb  inferecc_Fig2-cell-ratio_20240520_common_gene_oncogene_pathway.ipynb  inferecc_Fig2-specific_common_WGS_DB_OVERLAP.ipynb  inferecc_Fig3-ecDNA_module_cpr2circleViz.ipynb  inferecc_Fig3-ecDNA_module_cpr2circleViz_2.ipynb  inferecc_Fig3a-single_sample_example.ipynb  inferecc_Fig4-ESCA_P11_peiduifenxi.ipynb  inferecc_Fig4-common_change_cpr-20250729.ipynb  inferecc_Fig4-increased_common_cpr-20241218.ipynb  inferecc_Fig4-shared_common_cpr-20241218.ipynb  inferecc_Fig4-tracing_MAC.ipynb  methods.ipynb
source/: conf.py
(+50 files in other folders)
